--- a/copymang.html
+++ b/copymang.html
@@ -43,7 +43,7 @@
             const numbers = [1, 2, 3, 4, 5];
 
             const copy = [...numbers];
-            copy.push(6); 
+            copy.push(6); // add thêm một item xem mảng cũ nó thay đổi không
 
             console.log(copy);
             console.log(numbers);
@@ -53,7 +53,7 @@
 
 
 
-        console.log(C4());
+        console.log(C3());
     </script>
 </body>
 </html>
