--- a/sapXep Lấy 6 phần tử bé nhất.html
+++ b/sapXep Lấy 6 phần tử bé nhất.html
@@ -20,26 +20,31 @@
             { name: 'Monitor', price: 120, quality: 28, categoryId: 2, status: "new" },
             { name: 'Case', price: 120, quality: 28, categoryId: 5, status: "new" },
         ]
-    //sap xep theo gia
+    //sap xep theo gia với status là new 
     const mang = Product.reduce((arr, item)=>{
+        //arr là tạo 1 mảng giống tạo 1 mảng arr = []
+        //item là phần tử của mảng đc đọc ra
         if(item.status === "new"){
             arr.push({
                 name: `${item.name}`,
                 price: `${item.price}`,
+                status: "new",
             })
         }
         return arr
     },[])
-    const xapXepGia_0 = mang.sort((a,b) => a.price - b.price).slice(0,10)
+    const xapXepGia_0 = mang.sort((a,b) => a.price - b.price)
     console.log(xapXepGia_0);
 
-    const xapXepGia = Product.sort((a,b) => a.price - b.price).slice(0,6)
+    //hiển thị 6 món giá từ thấp đến cao
+    // const xapXepGia = Product.sort((a,b) => a.price - b.price).slice(0,6)
+    // console.log(xapXepGia);
 
     //sap xep theo do dai cua ten
     // const xapSepTen = Product.sort((a,b) => a.name.length - b.name.length)
     // console.log(xapSepTen); 
         
-  console.log(xapXepGia);
+  
     
     </script>
 </body>
